# githubReadmeForge

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py  setup.py  showroom.html
.agents/: AGENTS.md
.agents/skills/add-llm-provider/: SKILL.md
.agents/skills/improve-generation-prompt/: SKILL.md
.readme_forge_draft/: README.md
.readme_forge_draft/assets/readme/: ATTRIBUTIONS.md
readme_forge/: __init__.py  cli.py  hero_generator.py  llm.py  preview.py  visual_assets.py
readme_forge/agents/: __init__.py  analyzer.py  contracts.py  drift.py  orchestrator.py  reader.py  writer.py
tests/: test_agent_contracts.py  test_analyzer_fallback.py  test_demo_placeholder.py  test_reader.py  test_visual_and_drift.py  test_visual_assets.py  test_writer_robustness.py
web/: app.js  index.html  styles.css
