[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "githubReadmeForge"
version = "0.1.0"
description = "Multi-agent CLI & Web tool that analyzes codebases and forges professional README.md files using AI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "githubReadmeForge Contributors" }
]
keywords = ["readme", "documentation", "ai", "llm", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.3.0"]
openai = ["openai>=1.0.0"]
claude = ["anthropic>=0.18.0"]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/githubReadmeForge"
Repository = "https://github.com/your-username/githubReadmeForge"
Issues = "https://github.com/your-username/githubReadmeForge/issues"

[project.scripts]
readme-forge = "readme_forge.cli:main"

[tool.setuptools.packages.find]
include = ["readme_forge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
